Implementation of Data Access Leyer. Detaching date and time manipulation components from forms. Initiation of the insulin injection insertion form.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   sqflite: ^2.3.3+1
   path: ^1.9.0
+  fl_chart: ^0.69.0
 
 dev_dependencies:
   flutter_test:
